; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bootloader_support/src/extr_bootloader_utility.c_bootloader_debug_buffer.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bootloader_support/src/extr_bootloader_utility.c_bootloader_debug_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"%s: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bootloader_debug_buffer(i8* %0, i64 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %13 = load i64, i64* %5, align 8
  %14 = icmp ule i64 %13, 128
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = load i8*, i8** %4, align 8
  %18 = bitcast i8* %17 to i32*
  store i32* %18, i32** %7, align 8
  %19 = load i64, i64* %5, align 8
  %20 = mul i64 %19, 2
  %21 = add i64 %20, 1
  %22 = call i8* @llvm.stacksave()
  store i8* %22, i8** %8, align 8
  %23 = alloca i8, i64 %21, align 16
  store i64 %21, i64* %9, align 8
  %24 = load i64, i64* %5, align 8
  %25 = mul i64 %24, 2
  %26 = getelementptr inbounds i8, i8* %23, i64 %25
  store i8 0, i8* %26, align 1
  store i32 0, i32* %10, align 4
  br label %27

27:                                               ; preds = %76, %3
  %28 = load i32, i32* %10, align 4
  %29 = sext i32 %28 to i64
  %30 = load i64, i64* %5, align 8
  %31 = icmp ult i64 %29, %30
  br i1 %31, label %32, label %79

32:                                               ; preds = %27
  store i32 0, i32* %11, align 4
  br label %33

33:                                               ; preds = %72, %32
  %34 = load i32, i32* %11, align 4
  %35 = icmp slt i32 %34, 2
  br i1 %35, label %36, label %75

36:                                               ; preds = %33
  %37 = load i32*, i32** %7, align 8
  %38 = load i32, i32* %10, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32, i32* %40, align 4
  %42 = load i32, i32* %11, align 4
  %43 = icmp ne i32 %42, 0
  %44 = zext i1 %43 to i64
  %45 = select i1 %43, i32 0, i32 4
  %46 = ashr i32 %41, %45
  %47 = and i32 %46, 15
  store i32 %47, i32* %12, align 4
  %48 = load i32, i32* %12, align 4
  %49 = icmp slt i32 %48, 10
  br i1 %49, label %50, label %60

50:                                               ; preds = %36
  %51 = load i32, i32* %12, align 4
  %52 = add nsw i32 48, %51
  %53 = trunc i32 %52 to i8
  %54 = load i32, i32* %10, align 4
  %55 = mul nsw i32 %54, 2
  %56 = load i32, i32* %11, align 4
  %57 = add nsw i32 %55, %56
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i8, i8* %23, i64 %58
  store i8 %53, i8* %59, align 1
  br label %71

60:                                               ; preds = %36
  %61 = load i32, i32* %12, align 4
  %62 = add nsw i32 97, %61
  %63 = sub nsw i32 %62, 10
  %64 = trunc i32 %63 to i8
  %65 = load i32, i32* %10, align 4
  %66 = mul nsw i32 %65, 2
  %67 = load i32, i32* %11, align 4
  %68 = add nsw i32 %66, %67
  %69 = sext i32 %68 to i64
  %70 = getelementptr inbounds i8, i8* %23, i64 %69
  store i8 %64, i8* %70, align 1
  br label %71

71:                                               ; preds = %60, %50
  br label %72

72:                                               ; preds = %71
  %73 = load i32, i32* %11, align 4
  %74 = add nsw i32 %73, 1
  store i32 %74, i32* %11, align 4
  br label %33

75:                                               ; preds = %33
  br label %76

76:                                               ; preds = %75
  %77 = load i32, i32* %10, align 4
  %78 = add nsw i32 %77, 1
  store i32 %78, i32* %10, align 4
  br label %27

79:                                               ; preds = %27
  %80 = load i32, i32* @TAG, align 4
  %81 = load i8*, i8** %6, align 8
  %82 = call i32 @ESP_LOGD(i32 %80, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %81, i8* %23)
  %83 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %83)
  ret void
}

declare dso_local i32 @assert(i32) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @ESP_LOGD(i32, i8*, i8*, i8*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
